samples/_failures_safe/1761160257_0f27b8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_25de0876.c: In function ‘main’:
./samples/SAFE/__tmp_25de0876.c:152:5: error: expected declaration or statement at end of input
  152 |     print_matrix(&mat2);
      |     ^~~~~~~~~~~~
